<resources>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="photopay">PhotoPay Barcode</string>
    <string name="photopayHome">Back</string>
    <string name="LightOff">Light: off</string>
    <string name="LightOn">Light: on</string>
    <string name="scanBarcode">Start barcode scanning</string>
    <string name="photopayOK">OK</string>
    <string name="photopayHelpImageDescription">Description</string>
    <string name="photopayWarningTitle">Warning</string>
    <string name="FeatureUnsuportedAutofocus">This feature is not supported on phones without autofocus</string>
    <string name="FeatureUnsuportedAndroidVersion">This feature is supported for Android 2.1 and newer</string>
    <string name="FeatureUnsuportedDevice">PDF417.mobi is not supported because of the technical properties of your device</string>
    <string name="photopayErrorInitializing">Failed to initialize native library.</string>
    <string name="photopayCameraNotReady">Camera not ready.</string>
    <string name="InvalidLicense">Invalid license key!</string>
    <string name="CustomUIForbidden">License does not permit custom camera overlay!</string>
    <string name="PPCancel">Cancel</string>
    <string name="PPUse">Use</string>
    <string name="Copy">Copy</string>
    <string name="Copied">Text copied to clipboard</string>
    <string name="ga_trackingId">UA-40221478-1</string>
    <string name="app_name">Verifiquese - Cedula</string>
    <string name="UseWith">Use con</string>
    <string name="StartScanning">Iniciar escaneo</string>
    <string name="github">Github</string>
    <string name="facebook">Facebook</string>
    <string name="info">Info</string>
    <string name="version">Versión 0.2.4</string>
    <string name="VerDatos">Escanear Cédula Colombiana</string>
    <string name="PrimerNombre">** Primer Nombre **</string>
    <string name="SegundoNombre">** Segundo Nombre **</string>
    <string name="PrimerApellido">** Primer Apellido **</string>
    <string name="SegundoApellido">** Segundo Apellido **</string>
    <string name="NumeroCedula">** Número de Cédula **</string>
    <string name="BotonBDUA">Consultar BDUA</string>
    <string name="TituloBDUA">Consulta de afiliados a la Base de Datos Unica del Sistema de Seguridad Social: BDUA</string>
    <string name="BDUAEstado">** ESTADO **</string>
    <string name="BDUAEntidad">** ENTIDAD **</string>
    <string name="BDUARegimen">** REGIMEN **</string>
    <string name="BDUAFechaAfiliacion">** FECHA AFILIACIÓN **</string>
    <string name="BDUATipoAfiliado">** TIPO AFILIADO **</string>
    <string name="BDUADepartamento">** DEPARTAMENTO **</string>
    <string name="BDUACiudad">** CIUDAD **</string>
    <string name="BotonSimit">Consultar Simit</string>
    <string name="TituloSimit">Consulta del registro de infractores y la no realización de trámites: SIMIT</string>
    <string name="BotonCifin">Consultar Central Riesgos</string>
    <string name="TituloCifin">Consulta del Score Central de Riesgos</string>
    <string name="BotonCopnia">Consultar Copnia</string>
    <string name="BotonMesaVotacion">Consultar Mesa Votación</string>
    <string name="TituloCopnia">Consulta en el Consejo Profesional Nacional de Ingeniería: COPNIA</string>
    <string name="vacio" />
    <string name="EscribirCedula">Escribir número cédula</string>
    <string name="EscanearCedula">Escanear código de cédula</string>
    <string name="DescargarCedulaAceptadas">Descargar Cédulas Aceptadas</string>
    <string name="EscanearCedulaAceptadas">Verficar cédula Aceptada</string>
    <string name="hintEscribirCedula">Escriba el número de la cédula</string>
    <string name="hintEscribirPlaca">Escriba el número de la placa</string>
    <string name="action_continuar">Continuar</string>
    <string name="title_item_list">Cargando opciones....</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="str_cedula_no_encontrada">Cédula no encontrada en los sistemas consultados</string>
    <string name="title_activity_detalle">DetalleActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mensaje_error_network_1">No se logró conexión al servidor: El servidor no está disponible en éste momento o no se tiene conexión a internet.</string>
    <string name="mensaje_error_cedula_1">El código de barras leído no es una cédula de ciudadanía colombiana válida!</string>
    <string name="mensaje_error_cedula_2">El número de la Cédula no se lee correctamente!</string>
    <string name="mensaje_error_cedula_3">No es una cédula de ciudadanía Colombiana reconocida por Verifíquese!. Por favor reportar a soporte@verifique.se</string>
    <string name="mensaje_error_cedula_4">No es una cédula de ciudadanía Colombiana Válida!</string>
    <string name="mensaje_consulta_puesto_votacion">Consultando puesto de Votación…</string>
    <string name="mensaje_consulta_infracciones_simit">Consultando infracciones en el SIMIT…</string>
    <string name="mensaje_consulta_bdua">Consultando BDUA Fosyga…</string>
    <string name="mensaje_consulta_copnia">Consultando Consejos Profesional COPNIA…</string>
    <string name="mensaje_registrando">Registrando en Base de Datos</string>
    <string name="disclaimer">Esta aplicación no recolecta información. La información consultada a través de esta aplicación no es almacenada en bases de datos propias. Esta aplicación consulta información que está disponible en la internet, en bases de datos públicas. Las consultas realizadas se hacen directamente a los servicios prestados por las entidades como FOSYGA, SIMIT, RUNT, COPNIA, POLICIA. Si se realizan cambios en los sitios web de esas entidades es posible que alguna consulta deje de funcionar. Si esto le llega a suceder por favor escríbanos a nuestro correo: soporte@verifique.se. Asegúrese de tener la autorización del titular de la cédula de ciudadanía para acceder a estas consultas.</string>
    <string name="encuestaISO01">Estamos trabajando en la versión para iOS y tenemos una encuesta para tí. ¿Quieres responder la encuesta?</string>
    <string name="mensaje_consulta_licencias_transito">Consultando licencias de Tránsito RUNT…</string>
    <string name="mensaje_consulta_procuraduria">Consultando antecedentes procuraduría…</string>
    <string name="mensaje_consulta_placa_runt">Consultando placa en el RUNT…</string>
    <string name="mensaje_consulta_ruaf">Consultando RUAF en SISPRO…</string>
    <string name="mensaje_consulta_asopagos">Consultando ASOPAGOS…</string>
    <string name="mensaje_error_consulta_simit">No se encontraron infracciones en el Simit</string>
    <string name="mensaje_error_consulta_bdua">No se encontró información en Fosyga BDUA</string>
    <string name="mensaje_error_consulta_copnia">No se encontró información en el COPNIA</string>
    <string name="mensaje_error_envio_Persona">No se logró hacer el registro de la cédula</string>
    <string name="mensaje_error_consulta_licencia_transito">La página del RUNT generó error. Intente más tarde.</string>
    <string name="mensaje_consulta_licencia_transito_no_encontrado">No se encontró información de licencias Vigentes en el RUNT</string>
    <string name="mensaje_error_consulta_mesa_votacion">No se encontró la Mesa de Votación</string>
    <string name="mensaje_error_consulta_ruaf">No se encontró información en SISPRO RUAF</string>
    <string name="mensaje_abrir_navegador">El Certificado de Antecedentes se descargará en su navegador. Por favor revise las descargas en su dispositivo.</string>
    <string name="item_opciones_1">Detalle cédula</string>
    <string name="item_opciones_2">Compartir datos cédula</string>
    <string name="item_opciones_3">Puesto votación (REG)</string>
    <string name="item_opciones_4">Infracciones tránsito (SIMIT)</string>
    <string name="item_opciones_5">Seguridad social(BDUA)</string>
    <string name="item_opciones_6">Consejos Profesionales (COPNIA)</string>
    <string name="item_opciones_7">Registrar</string>
    <string name="item_opciones_8">Licencias de conducción vigentes (RUNT)</string>
    <string name="item_opciones_9">Certificado Antecedentes Fiscales Contraloría</string>
    <string name="item_opciones_10">Certificado Antecedentes Procuraduría - Ordinario</string>
    <string name="item_opciones_11">Automotor por Placa (RUNT)</string>
    <string name="item_opciones_12">Afiliaciones a Seguridad Social (RUAF)</string>
    <string name="item_opciones_vacio" />
    <string name="nombre_cedula">Cédula</string>
    <string name="nombre_direccion_puesto">Dirección del Puesto:</string>
    <string name="nombre_fecha_inscripcion">Fecha de Inscripción:</string>
    <string name="nombre_profesion">Profesión:</string>
    <string name="apoyanos">Apóyanos para seguir adelante!</string>
    <string name="CargandoPublicidad">Estamos cargando… Por favor espera!</string>
</resources>