<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/main_background" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="100.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/TallaTextoVersion" android:textStyle="italic" android:textColor="@color/negro" android:gravity="center" android:layout_gravity="top|center" android:id="@id/TextView01" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/version" android:layout_weight="10.0" />
    <ImageView android:id="@id/imageView1" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="wrap_content" android:layout_height="0.0dip" android:src="@drawable/title2" android:adjustViewBounds="true" android:layout_weight="30.0" android:contentDescription="@string/app_name" />
    <TextView android:textSize="@dimen/TallaTextoVersion" android:textStyle="italic" android:textColor="@color/negro" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="0.0dip" android:text="@string/apoyanos" android:layout_weight="10.0" />
    <TextView android:textSize="@dimen/TallaTextoVersion" android:textStyle="italic" android:textColor="@color/negro" android:id="@id/textoEsperando1" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="0.0dip" android:text="@string/CargandoPublicidad" android:layout_weight="10.0" />
    <Button android:textSize="@dimen/TallaTextoVersion" android:id="@id/buttonDescargarCedulas" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/DescargarCedulaAceptadas" android:layout_weight="10.0" android:onClick="descargarCedulas_click" style="@android:style/Widget.Button" />
    <Button android:textSize="@dimen/TallaTextoVersion" android:id="@id/buttonVerificar" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/EscanearCedulaAceptadas" android:layout_weight="10.0" android:onClick="btnEscanearCedula_Validar_click" style="@android:style/Widget.Button" />
    <Button android:textSize="@dimen/TallaTextoVersion" android:id="@id/Button01" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/EscanearCedula" android:layout_weight="10.0" android:onClick="btnEscanearCedula_click" style="@android:style/Widget.Button" />
    <Button android:textSize="@dimen/TallaTextoVersion" android:id="@id/btnDatos" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/EscribirCedula" android:layout_weight="10.0" android:onClick="btnEscribirCedula_click" style="@android:style/Widget.Button" />
    <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="10.0">
        <ImageButton android:id="@id/btnTwitter" android:background="@color/transparent" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:src="@drawable/twitter" android:scaleType="center" android:adjustViewBounds="true" android:onClick="btnInfo_click" android:contentDescription="@string/github" />
        <ImageButton android:id="@id/btnFacebook" android:background="@color/transparent" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:src="@drawable/facebook" android:scaleType="center" android:adjustViewBounds="true" android:onClick="btnInfo_click" android:contentDescription="@string/facebook" />
        <ImageButton android:id="@id/btnInfo" android:background="@color/transparent" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:src="@drawable/info" android:scaleType="center" android:adjustViewBounds="true" android:onClick="btnInfo_click" android:contentDescription="@string/info" />
    </LinearLayout>
</LinearLayout>